# c_common_template

./: .clang-format  .config  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CTestCustom.cmake.in  Kconfig  README.md  gcovr.cfg  requirements.txt
.github/workflows/: cmake-build-test.yml  cmake-multi-platform.yml
src/: CMakeLists.txt  Kconfig  main.c
test/: CMakeLists.txt  test.c  unity_config.h
tests/: CMakeLists.txt  test.c
tools/kconfig/: kconfig.py
tools/setup/: setup.bat  setup.ps1  setup.sh
